tests-system/combined-rsl-file-2/output
package Example
        ^^^^^^^ combined-rsl-file-2/b.rsl:1: error: duplicate definition, previous definition at a.rsl:1
Processed 2 models, and 0 requirement files and found 1 error
